fix(#109): fix tx popup not showing on all screen sizes

--- a/src/wallets/components/connected-wallet/s.module.scss
+++ b/src/wallets/components/connected-wallet/s.module.scss
@@ -154,7 +154,6 @@
 }
 
 .txSection {
-  left: 2318px !important;
   top: 33px !important;
-  width: 164px;
+  width: 163px;
 }
